[package]
name = "schemamama"
version = "0.3.0"
authors = ["Skyler Lipthay <skyler.lipthay@gmail.com>"]
description = "A lightweight database schema migration system"
readme = "README.md"
keywords = ["database", "migration"]
license = "MIT"
repository = "https://github.com/SkylerLipthay/schemamama"

[dependencies]
log = "0.4"
